samples/_failures_safe/1761661316_88a9fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a6ea21e.c: In function ‘main’:
./samples/SAFE/__tmp_6a6ea21e.c:147:5: error: expected declaration or statement at end of input
  147 |     unsigned char decompressed[MAX_INPUT_SIZE];
      |     ^~~~~~~~
